Update chống deadline

--- a/hydroos/index.html
+++ b/hydroos/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -50,6 +52,7 @@
           <li><a href="Download.html">Tải về</a></li>
           <li><a href="about.html">Về chúng tôi</a></li>
           <li><a href="#portfolio">Hỗ trợ</a></li>
+          <!--
           <li class="drop-down"><a href="">Thêm</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -66,7 +69,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -80,7 +83,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>1 hệ điều hành được phát triển bởi cộng đồng <a href="https://kodelang.dev" style="font-weight: bolder; font-family: 'Cutive Mono', monospace; font-size: 45pt;">Kode</a></h1>
+          <h1>1 hệ điều hành được phát triển bởi cộng đồng <a href="https://kodelang.dev"
+              style="font-weight: bolder; font-family: 'Cutive Mono', monospace; font-size: 45pt;">Kode</a></h1>
           <h2></h2>
           <div><a href="download.html" class="btn-get-started scrollto">Tải về ngay!</a></div>
         </div>
@@ -100,29 +104,39 @@
 
         <div class="row">
           <div class="col-xl-5 col-lg-6 d-flex justify-content-center video-box align-items-stretch">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+              data-autoplay="true"></a>
           </div>
 
-          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
+          <div
+            class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
             <h3>Hydro OS</h3>
-            <p>Là một hệ điều hành dễ tiếp cận, thân thiện và mã nguồn mở. Không như những hệ điều hành mã nguồn đóng như Windows hay Mac OS, với Hydro OS, bạn có thể tùy chỉnh hệ điều hành của bạn mà không có giới hạn nào, từ Kernel cho đến giao diện.</p>
+            <p>Là một hệ điều hành dễ tiếp cận, thân thiện và mã nguồn mở. Không như những hệ điều hành mã nguồn đóng
+              như Windows hay Mac OS, với Hydro OS, bạn có thể tùy chỉnh hệ điều hành của bạn mà không có giới hạn nào,
+              từ Kernel cho đến giao diện.</p>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
               <h4 class="title"><a href="">An toàn tuyệt đối</a></h4>
-              <p class="description">Hydro OS là hệ điều hành dựa trên Arch Linux, hệ điều hành có độ an toàn cao và được cập nhật thường xuyên theo kiểu cập nhật cuốn chiếu (rolling release) nên máy của bạn sẽ luôn có những phần mềm và bản vá bảo mật mới nhất. </p>
+              <p class="description">Hydro OS là hệ điều hành dựa trên Arch Linux, hệ điều hành có độ an toàn cao và
+                được cập nhật thường xuyên theo kiểu cập nhật cuốn chiếu (rolling release) nên máy của bạn sẽ luôn có
+                những phần mềm và bản vá bảo mật mới nhất. </p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-gift"></i></div>
               <h4 class="title"><a href="">Miễn phí</a></h4>
-              <p class="description">Hydro OS là 1 hệ điều hành mã nguồn mở, được tạo bởi cộng đồng Kode gồm những Koder tâm huyết, hướng đến sứ mệnh là 1 hệ điều hành miễn phí và ổn định. Bạn, người dùng, là trung tâm chính, nên chúng tôi sẽ không điều khiển máy của bạn và tôn trọng quyền riêng tư của bạn.</p>
+              <p class="description">Hydro OS là 1 hệ điều hành mã nguồn mở, được tạo bởi cộng đồng Kode gồm những Koder
+                tâm huyết, hướng đến sứ mệnh là 1 hệ điều hành miễn phí và ổn định. Bạn, người dùng, là trung tâm chính,
+                nên chúng tôi sẽ không điều khiển máy của bạn và tôn trọng quyền riêng tư của bạn.</p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-atom"></i></div>
               <h4 class="title"><a href="">Cộng đồng thân thiện</a></h4>
-              <p class="description">Chúng tôi có một cộng đồng tuyệt vời, lịch sự mang tên <a href="https://kodelang.dev"> Kode </a>. Ai đến đây đều được chào mừng và họ đều được coi là những người sẽ giúp ích cho sự phát triển của cộng đồng.</p>
+              <p class="description">Chúng tôi có một cộng đồng tuyệt vời, lịch sự mang tên <a
+                  href="https://kodelang.dev"> Kode </a>. Ai đến đây đều được chào mừng và họ đều được coi là những
+                người sẽ giúp ích cho sự phát triển của cộng đồng.</p>
             </div>
 
           </div>
@@ -132,71 +146,8 @@
     </section><!-- End About Section -->
 
 
-
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>MỘT SỐ HÌNH ẢNH TIÊU BIỂU</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Tất cả ảnh</li>
-              <!-- <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li> -->
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-<!--          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+<!--Photo Grid-->
+          <!--          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -297,7 +248,8 @@
             <h4>Ceo &amp; Người sáng lập Kode</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
+              quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -308,7 +260,8 @@
             <h4>Kode Developer &amp; Designer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
+              quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -319,7 +272,10 @@
             <h4>Kode Developer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Hydro OS là một trong những hệ điều hành tuyệt vời nhất tôi được dùng. Tôi là người đã thử khá nhiều Linux Distro, nhưng Hydro OS xứng đáng là điểm dừng của tôi trong cuộc hành trình. 1 trong những điểm tôi thích nhất ở Hydro OS có lẽ là Arch-based. Ít bloatware, chiếm ít tài nguyên và cực kỳ mượt mà. Nói chung là 1 sự thay thế xứng đáng cho Windows!
+              Hydro OS là một trong những hệ điều hành tuyệt vời nhất tôi được dùng. Tôi là người đã thử khá nhiều Linux
+              Distro, nhưng Hydro OS xứng đáng là điểm dừng của tôi trong cuộc hành trình. 1 trong những điểm tôi thích
+              nhất ở Hydro OS có lẽ là Arch-based. Ít bloatware, chiếm ít tài nguyên và cực kỳ mượt mà. Nói chung là 1
+              sự thay thế xứng đáng cho Windows!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -382,7 +338,7 @@
                 <i class="icofont-phone"></i>
                 <h4>Điện thoại:</h4>
               </div>
-                <p>+84</p>
+              <p>+84</p>
 
             </div>
 
@@ -393,26 +349,31 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Họ và tên" data-rule="minlen:4" data-msg="Xin hãy nhập ít nhất 4 chữ cái" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Họ và tên"
+                    data-rule="minlen:4" data-msg="Xin hãy nhập ít nhất 4 chữ cái" />
                   <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder=" Email" data-rule="email" data-msg="Xin hãy nhập email hợp lệ" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder=" Email"
+                    data-rule="email" data-msg="Xin hãy nhập email hợp lệ" />
                   <div class="validate"></div>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Chủ đề" data-rule="minlen:4" data-msg="Xin hãy nhập ít nhất 8 từ" />
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Chủ đề"
+                  data-rule="minlen:4" data-msg="Xin hãy nhập ít nhất 8 từ" />
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Hãy viết gì đó, bạn có thể giúp Hydro OS ngày 1 tốt hơn!" placeholder="Ý kiến"></textarea>
+                <textarea class="form-control" name="message" rows="5" data-rule="required"
+                  data-msg="Hãy viết gì đó, bạn có thể giúp Hydro OS ngày 1 tốt hơn!" placeholder="Ý kiến"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
                 <div class="loading">Đang gửi...</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Ý kiến của bạn đã được gửi! Cảm ơn vì bạn đã giúp Hydro OS ngày 1 tốt hơn! </div>
+                <div class="sent-message">Ý kiến của bạn đã được gửi! Cảm ơn vì bạn đã giúp Hydro OS ngày 1 tốt hơn!
+                </div>
               </div>
               <div class="text-center"><button type="submit">Gửi ngay!</button></div>
             </form>
@@ -471,7 +432,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3></h3>
             <p>
-              
+
             </p>
           </div>
 
@@ -501,7 +462,8 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/butterfly-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a href="https://github.com/kodestudio">@koder</a>.
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a
+          href="https://github.com/kodestudio">@koder</a>.
       </div>
     </div>
   </footer><!-- End Footer -->
