--- a/update.html
+++ b/update.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Page in maintainance</title>
+    <title>Page in maintenance</title>
     <style>
         * {
             padding: 0;
@@ -101,18 +101,6 @@
         }
     </style>
     <script>
-        /**
-         * The easiest way to take a break at work.
-         * Just launch the fullscreen version here :
-         * http://emilienleroy.fr/codepen/wu/
-         * Press F11 and go take a coffee :p
-         * 
-         * Follow me :D
-         * https://github.com/EmilienLeroy
-         * https://codepen.io/emilienleroy/
-         * https://twitter.com/EmilienLeroyIT
-         */
-
         //init percentage
         let percentage = 0;
         //init the current time
@@ -172,8 +160,8 @@
             <div class="update__text">
                 <p>This website is now under maintainance</p>
                 <p id="update__percentage">0% completed</p>
-                <p>Don't believe in the update percentage as this process will be never completed unless you press ENTER with a hammer. </p><br>
-                <p><a href="https://kodelang.dev">Now, please click here go back to homepage nor your computer will have a BSOD</a></p>
+                <p>Don't believe in the update percentage as this process will never be completed unless you press ENTER with a hammer. </p><br>
+                <p><a href="https://kodelang.dev">Now, click here to go back to homepage nor your computer will be exploded.</a></p>
             </div>
         </div>
     </div>
