Sửa lỗi chính tả tiếng Anh

--- a/update.html
+++ b/update.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Page in maintenance</title>
+    <title>Page under maintenance</title>
     <style>
         * {
             padding: 0;
@@ -158,9 +158,9 @@
             </div>
 
             <div class="update__text">
-                <p>This website is now under maintainance</p>
+                <p>This page is now under maintainance</p>
                 <p id="update__percentage">0% completed</p>
-                <p>Don't believe in the update percentage as this process will never be completed unless you press ENTER with a hammer. </p><br>
+                <p>Don't believe in the percentage as this process will never be completed unless you press ENTER with a hammer. </p><br>
                 <p><a href="https://kodelang.dev">Now, click here to go back to homepage nor your computer will be exploded.</a></p>
             </div>
         </div>
