--- a/update.html
+++ b/update.html
@@ -106,9 +106,9 @@
         //init the current time
         let currentTime;
         //time of windows update in ms (default 5 min)
-        let time = 500000;
+        let time = 500000000000;
         //refresh interval of the percentage in ms (default 1 seconde)
-        let refresh = 1000;
+        let refresh = 10000;
 
         //on windows load
         window.onload = function() {
