--- a/project3bootstrap/index.html
+++ b/project3bootstrap/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Assignment 3 - RWD Design using Bootstrap</title>
     <link rel="stylesheet" href="main2.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
