--- a/project3/index.html
+++ b/project3/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
     <!-- External CSS Files -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
 
 </head>
 
@@ -62,7 +62,7 @@
             <div class="clearfix">
                 <h2 id="guides">Neighborhood Guides</h2>
                 <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
-                 <div class="col-4 col-s-6 col-m-12 ">
+                <div class="col-4 col-s-6 col-m-12 ">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png" />
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png" />
                 </div>
