--- a/project3/index.html
+++ b/project3/index.html
@@ -60,8 +60,10 @@
     <div class="photo">
         <div class="container ">
             <div class="clearfix">
-                <h2 id="guides">Neighborhood Guides</h2>
-                <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
+                <div class="neighborhood">
+                    <h2>Neighborhood Guides</h2>
+                    <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
+                </div>
                 <div class="col-4 col-s-6 col-m-12 ">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png" />
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png" />
