Update login - signup

--- a/project3/success.html
+++ b/project3/success.html
@@ -22,7 +22,10 @@
 </head>
 
 <body>
-
+    <div class="success-msg">
+        <i class="fa fa-check"></i>
+        Login successful! Enjoy your time at our website!
+      </div>
     <!-- NAVIGATION BAR -->
     <nav class="navbar">
         <ul class="nav-left">
