--- a/asm4/index.html
+++ b/asm4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>Kode Space - Version 2</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
       <div class="row">
         <div class=" col-lg-6 justify-content-center">
           <h1 class="display-4">Kode</h1>
-          <h2 class="lead">is an open community, where everyone has the passion of coding, gather together.</h2>
+          <h2 class="lead">is an open community, where everyone who has the passion of coding, gathers together.</h2>
           <hr class="my-4">
           <h2 style="font-weight:bold">"By Koders, for Koders"<br></h2>
           <h3>Here, we will materialize your dream together, with the help of experienced
