--- a/asm4/product.html
+++ b/asm4/product.html
@@ -5,14 +5,16 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Kode Space - Trang chủ</title>
+    <title>Kaka's Corner</title>
     <meta content="" name="description">
 
     <meta content="" name="keywords">
 
     <!-- Favicons -->
+    <!--
     <link href="https://avatars.githubusercontent.com/u/58879335" rel="icon">
     <link href="https://avatars.githubusercontent.com/u/58879335" rel="apple-touch-icon">
+    -->
 
     <!-- Google Fonts -->
     <link
