--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -51,8 +51,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">HOME</a></li>
-          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
+          <li class="active"><a href="index.html">HOME</a></li>
+          <li><a href="product.html">ALL PRODUCTS</a></li>
           <li><a href="#">HELP</a></li>
           <li><a href="#">CONTACT US</a></li>
         </ul>
