--- a/kakascorner/help.html
+++ b/kakascorner/help.html
@@ -81,7 +81,30 @@
     </div>
 
 
+<h1>SHIPPING & SERVICE</h1>
+<h2>When can I expect my order?</h2>
+<p>Standard Delivery: (5-8 Business Days)
+  Orders are typically delivered within 5 - 8 business days for Standard service. Actual delivery time depends on shipping distance and may vary.
+  Delivery to some remote addresses may require up to 2 additional days.
+  See www.ups.com for additional details.
+  Express Delivery: (2 Business Days)
+  Orders are typically delivered by the end of the second business day after they are shipped.
+  Your order will be shipped after your credit has been approved and/or any other necessary verification has been completed. To be shipped the same day, your order must be submitted and such approval and verifications completed by no later than 3 pm Eastern/12 pm Pacific. All other orders will be shipped on the day that credit approval and/or other verifications are completed, unless the same takes place after 3 pm Eastern/12 pm Pacific, in which case the order will be shipped on the following business day.
+  Some locations in Alaska, Hawaii, and remote areas may require additional transit time.
+  See www.ups.com for additional details.
+  
+  Rushed Delivery: (1 Business Day)
+   Orders are typically delivered by 3 pm (Local Time) the next business day after they are shipped. Shipments to rural addresses are typically delivered by 4:30 pm (Local Time) the next business day after they are shipped.
+  Available for shipments to addresses within the 48 contiguous states and to limited addresses in Alaska and Hawaii.
+  Your order will be shipped after your credit has been approved and/or any other necessary verification has been completed. To be shipped the same day, your order must be submitted and such approval and verifications completed by no later than 3 pm Eastern/12 pm Pacific. All other orders will be shipped on the day that credit approval and/or other verifications are completed, unless the same takes place after 3 pm Eastern/12 pm Pacific, in which case the order will be shipped on the following business day.
+  See www.ups.com for additional details.
+  </p>
 
+<h2>What should I do if I only received a partial shipment?</h2>
+<p> It is possible your shipment was split based on product availability, and that the missing items will be shipped when they become available. Please contact us at 1-866-678-1770 from 9AM – 6PM EST Monday – Friday (except holidays) to report an incomplete shipment, and we will check the status of your missing items. We apologize for any inconvenience this may have caused.
+</p>
+
+<h2></h2>
 
 
 
