--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -90,6 +90,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/fte.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">99+</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>Facial Treatment Essence</h4>
          </div>
         </div>
@@ -98,6 +99,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/fek.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">99</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>First Experience Kit</h4>
          </div>
         </div>
@@ -106,6 +108,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/piterapowerkit.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">110</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>New PITERA™ Power Kit</h4>
          </div>
         </div>
@@ -117,6 +120,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/olympicfte.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">247</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>Special Edition PITERA™ Essence</h4>
          </div>
         </div>
@@ -125,6 +129,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/aurakit.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">110</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>PITERA™ Aura Kit</h4>
          </div>
         </div>
@@ -133,6 +138,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/skinpower.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">235</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>SKINPOWER Cream</h4>
          </div>
         </div>
@@ -145,6 +151,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/ftmask.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">95+</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>Facial Treatment Mask</h4>
          </div>
         </div>
@@ -153,6 +160,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/aml.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">160</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>SKINPOWER Airy Milky Lotion</h4>
          </div>
         </div>
@@ -161,6 +169,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/aura.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">245</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>GenOptics Aura Essence Serum</h4>
          </div>
         </div>
@@ -179,6 +188,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/skinpowerserum.png" alt="img" style="width: 47%"></figure>
          <h3> $<strong class="price_text">199</strong></h3>
+         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>SKINPOWER Essence</h4>
             </div>
         </div>
@@ -187,6 +197,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/eyecream.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">139</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>SKINPOWER Eye Cream</h4>
          </div>
         </div>
@@ -195,6 +206,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/rnaeyecream.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">199</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>R.N.A.POWER Eye Cream</h4>
          </div>
         </div>
@@ -217,6 +229,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/rnaserum.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">199</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>R.N.A.POWER Essence Serum</h4>
          </div>
         </div>
@@ -225,6 +238,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/ftcl.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">76</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>Facial Treatment Clear Lotion</h4>
          </div>
         </div>
@@ -233,6 +247,7 @@
           <div class="sport_product">
             <figure><img src="assets/img/product/srm.png" alt="img" style="width: 47%"></figure>
            <h3> $<strong class="price_text">75</strong></h3>
+           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
             <h4>Facial Treatment Cleanser</h4>
          </div>
         </div>
@@ -254,6 +269,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmmmbgc.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">165</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>The Mini Miracle Broth™ Glow Collection</h4>
      </div>
     </div>
@@ -262,6 +278,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmrrc.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">340</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>The Regimen Renewal Collection</h4>
      </div>
     </div>
@@ -270,6 +287,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmc.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">345</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>The Moisturizing Soft Cream</h4>
      </div>
     </div>
@@ -281,6 +299,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmtro.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">250</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>The Renewal Oil</h4>
      </div>
     </div>
@@ -289,6 +308,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmtc.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">200</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>The Concentrate</h4>
      </div>
     </div>
@@ -297,6 +317,7 @@
       <div class="sport_product">
         <figure><img src="assets/img/product/lmc.webp" alt="img" style="width: 47%"></figure>
        <h3> $<strong class="price_text">345</strong></h3>
+       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
         <h4>Crème de la Mer</h4>
      </div>
     </div>
