--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -330,7 +330,7 @@
 
 
 <!-- FOOTER -->
-    <div class="footer-top">
+    <div class="footer-top .bg-dark    ">
         <div class="container">
             <div class="row gy-4">
                 <div class="col-lg-5 col-md-12 footer-info footh1">
