--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kode Space - Trang chủ</title>
+  <title>Kaka's Corner - Home</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -53,8 +53,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">HOME</a></li>
             <li><a href="product.html">ALL PRODUCTS</a></li>
-            <li><a href="#">HELP</a></li>
-            <li><a href="#">CONTACT US</a></li>
+            <li><a href="help.html">HELP</a></li>
+            <li><a href="contact.html">CONTACT US</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><i class="bi bi-facebook"></i></a></li>
