--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Kaka's Corner</title>
+    <title>Kaka's Corner - All Products</title>
     <meta content="" name="description">
 
     <meta content="" name="keywords">
@@ -51,10 +51,10 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">HOME</a></li>
-          <li><a href="product.html">ALL PRODUCTS</a></li>
-          <li><a href="#">HELP</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <li ><a href="index.html">HOME</a></li>
+          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
+          <li><a href="help.html">HELP</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><i class="bi bi-facebook"></i></a></li>
