--- a/kakascorner/help.html
+++ b/kakascorner/help.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Kaka's Corner</title>
+    <title>Kaka's Corner - Help & Support</title>
     <meta content="" name="description">
 
     <meta content="" name="keywords">
@@ -54,7 +54,7 @@
           <li><a href="index.html">HOME</a></li>
           <li ><a href="product.html">ALL PRODUCTS</a></li>
           <li class="active"><a href="help.html">HELP</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -80,21 +80,21 @@
         </div>
     </div>
 
-
-<h1>SHIPPING & SERVICE</h1>
+<div class="container help">
+<h1 style="color: white; visibility: hidden;">.</h1>
 <h2>When can I expect my order?</h2>
-<p>Standard Delivery: (5-8 Business Days)
-  Orders are typically delivered within 5 - 8 business days for Standard service. Actual delivery time depends on shipping distance and may vary.
+<h3>Standard Delivery: (5-8 Business Days)</h3>
+  <p>Orders are typically delivered within 5 - 8 business days for Standard service. Actual delivery time depends on shipping distance and may vary.
   Delivery to some remote addresses may require up to 2 additional days.
-  See www.ups.com for additional details.
-  Express Delivery: (2 Business Days)
-  Orders are typically delivered by the end of the second business day after they are shipped.
+  See www.ups.com for additional details.</p>
+  <h3>Express Delivery: (2 Business Days)</h3>
+  <p>Orders are typically delivered by the end of the second business day after they are shipped.
   Your order will be shipped after your credit has been approved and/or any other necessary verification has been completed. To be shipped the same day, your order must be submitted and such approval and verifications completed by no later than 3 pm Eastern/12 pm Pacific. All other orders will be shipped on the day that credit approval and/or other verifications are completed, unless the same takes place after 3 pm Eastern/12 pm Pacific, in which case the order will be shipped on the following business day.
   Some locations in Alaska, Hawaii, and remote areas may require additional transit time.
-  See www.ups.com for additional details.
+  See www.ups.com for additional details.</p>
   
-  Rushed Delivery: (1 Business Day)
-   Orders are typically delivered by 3 pm (Local Time) the next business day after they are shipped. Shipments to rural addresses are typically delivered by 4:30 pm (Local Time) the next business day after they are shipped.
+  <h3>Rushed Delivery: (1 Business Day)</h3>
+  <p> Orders are typically delivered by 3 pm (Local Time) the next business day after they are shipped. Shipments to rural addresses are typically delivered by 4:30 pm (Local Time) the next business day after they are shipped.
   Available for shipments to addresses within the 48 contiguous states and to limited addresses in Alaska and Hawaii.
   Your order will be shipped after your credit has been approved and/or any other necessary verification has been completed. To be shipped the same day, your order must be submitted and such approval and verifications completed by no later than 3 pm Eastern/12 pm Pacific. All other orders will be shipped on the day that credit approval and/or other verifications are completed, unless the same takes place after 3 pm Eastern/12 pm Pacific, in which case the order will be shipped on the following business day.
   See www.ups.com for additional details.
@@ -104,10 +104,14 @@
 <p> It is possible your shipment was split based on product availability, and that the missing items will be shipped when they become available. Please contact us at 1-866-678-1770 from 9AM – 6PM EST Monday – Friday (except holidays) to report an incomplete shipment, and we will check the status of your missing items. We apologize for any inconvenience this may have caused.
 </p>
 
-<h2></h2>
+<h2>Why are prices different now than when I made my purchase?</h2>
+<p>All prices and availability of products are subject to change without notice, up until the order is completed and confirmed. We make every effort to provide you the most accurate information on pricing and availability. In addition, some of the items on our web site may be incorrectly priced or no longer available at the time you place your order.
+</p>
 
+<h2>Why is my credit card authorized for more than the purchase amount?</h2>
+<p>During the credit approval/confirmation process, your credit card is not charged for your order. The pending transaction that you see is actually a pre-authorization charge. The final charge, where we will take the funds from your credit card, will happen once the item has shipped. If you have any further questions, please call us at 1-866-678-1770 from 9am – 6pm EST Monday – Friday (except holidays).</p><br><br><br><br><br>
 
-
+</div>
 
 <!-- FOOTER -->
     <div class="footer-top">
