--- a/kakascorner/contact.html
+++ b/kakascorner/contact.html
@@ -35,6 +35,15 @@
   <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXVYLK507N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MXVYLK507N');
+</script>
 </head>
 
 <body>
@@ -94,15 +103,23 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="sport_product">
-          <a href="https://www.facebook.com/groups/358645509008864"><figure><img src="assets/img/logo/facebook.svg" alt="img" style="width: 20%"></figure></a>
-          <a href="https://www.facebook.com/groups/358645509008864"><h3 class="logo">FACEBOOK</h3></a>
+          <a href="https://www.facebook.com/groups/358645509008864">
+            <figure><img src="assets/img/logo/facebook.svg" alt="img" style="width: 20%"></figure>
+          </a>
+          <a href="https://www.facebook.com/groups/358645509008864">
+            <h3 class="logo">FACEBOOK</h3>
+          </a>
         </div>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="sport_product">
-          <a href="https://twitter.com"><figure><img src="assets/img/logo/twitter.svg" alt="img" style="width: 20%"></figure></a>
-          <a href="https://twitter.com"><h3 class="logo">TWITTER</h3></a>
+          <a href="https://twitter.com">
+            <figure><img src="assets/img/logo/twitter.svg" alt="img" style="width: 20%"></figure>
+          </a>
+          <a href="https://twitter.com">
+            <h3 class="logo">TWITTER</h3>
+          </a>
         </div>
       </div>
 
@@ -113,50 +130,52 @@
 
 
   <!-- FOOTER -->
-  <div class="footer-top .bg-dark    ">
-    <div class="container">
-      <div class="row gy-4">
-        <div class="col-lg-5 col-md-12 footer-info footh1">
-          <a href="index.html" class="logo d-flex align-items-center"
-            style="font-size: 48px; font-weight: 600; color: #ea0429; font-family: 'Mate SC', serif; letter-spacing: 10px;">
-            <!--<img src="assets/img/logo.png" alt="">-->
-            <h1>Kaka's Corner</h1>
-          </a>
+  <footer>
+    <div class="bg-dark">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row gy-4">
+            <div class="col-lg-5 col-md-12 footer-info footh1">
+              <a href="index.html" class="logo d-flex align-items-center"
+                style="font-size: 48px; font-weight: 600; color: #ea0429; font-family: 'Mate SC', serif; letter-spacing: 10px;">
+                <!--<img src="assets/img/logo.png" alt="">-->
+                <h1>Kaka's Corner</h1>
+              </a>
 
+            </div>
+
+            <div class="col-lg-2 col-6 footer-links">
+
+            </div>
+
+            <div class="col-lg-2 col-6 footer-links">
+
+            </div>
+
+            <div class="col-lg-3 col-md-12 footer-contact text-left text-md-start">
+              <h4>Quick informations</h4>
+              <p>
+                <b>Address:</b><br> 157 Han Mac Tu, <br> Vy Da District,<br> Hue City,<br> Viet Nam <br><br>
+                <strong>Phone number:</strong><br> +84 912 560 590 <br><br>
+                <strong>Email:</strong><br> thiennnfx10909@funix.edu.vn
+
+              </p>
+
+            </div>
+
+          </div>
         </div>
-
-        <div class="col-lg-2 col-6 footer-links">
-
-        </div>
-
-        <div class="col-lg-2 col-6 footer-links">
-
-        </div>
-
-        <div class="col-lg-3 col-md-12 footer-contact text-left text-md-start">
-          <h4>Quick informations</h4>
-          <p>
-            <b>Address:</b><br> 157 Han Mac Tu, <br> Vy Da District,<br> Hue City,<br> Viet Nam <br><br>
-            <strong>Phone number:</strong><br> +84 912 560 590 <br><br>
-            <strong>Email:</strong><br> thiennnfx10909@funix.edu.vn
-
-          </p>
-
-        </div>
-
       </div>
-    </div>
-  </div>
 
-  <div class="container">
-    <div class="copyright">
-      &copy; Copyright <strong><span>Nguyen Ngoc Thien</span></strong> 2021. All Rights Reserved.
-    </div>
-    <div class="credits">
-      Edit with ❤ by Nguyen Ngoc Thien</a>
-    </div>
-  </div>
-  </footer>
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Nguyen Ngoc Thien</span></strong> 2021. All Rights Reserved.
+        </div>
+        <div class="credits">
+          Edit with ❤ by Nguyen Ngoc Thien</a>
+        </div>
+      </div>
+    </footer>
 
 
 </body>
