--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         gtag('config', 'G-41DE8L9LXL');
     </script>
-
+<script data-ad-client="ca-pub-9602711292021779" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 
