--- a/kakascorner/contact.html
+++ b/kakascorner/contact.html
@@ -44,6 +44,7 @@
 
   gtag('config', 'G-MXVYLK507N');
 </script>
+<script data-ad-client="ca-pub-9602711292021779" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
