--- a/kakascorner/contact.html
+++ b/kakascorner/contact.html
@@ -61,19 +61,19 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="product.html">ALL PRODUCTS</a></li>
+          <li ><a href="index.html">HOME</a></li>
+          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
           <li><a href="help.html">HELP</a></li>
-          <li class="active"><a href="contact.html">CONTACT US</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-        </ul>
+          <li><a href="https://fb.com"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="https://instagram.com"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
       </div>
     </div>
   </nav>
-
 
 
 
