--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -47,34 +47,33 @@
 
 <body>
 
-    <!-- NAVIGATION BAR -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">KAKA'S CORNER</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="product.html">ALL PRODUCTS</a></li>
-            <li><a href="help.html">HELP</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-            <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-            </ul>
-        </div>
+
+  <!-- NAVIGATION BAR -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">KAKA'S CORNER</a>
       </div>
-    </nav>
-
-
-
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li ><a href="index.html">HOME</a></li>
+          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
+          <li><a href="help.html">HELP</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="https://fb.com"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="https://instagram.com"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+      </div>
+    </div>
+  </nav>
   <!-- JBT -->
   <div class="jumbotron jumbotron-fluid custom1 hero d-flex align-items-center">
     <div class="container">
