--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -68,8 +68,9 @@
           <li><a href="contact.html">CONTACT US</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="https://fb.com"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="https://instagram.com"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
       </div>
     </div>
