--- a/kakascorner/help.html
+++ b/kakascorner/help.html
@@ -64,8 +64,8 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li ><a href="index.html">HOME</a></li>
-          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
-          <li><a href="help.html">HELP</a></li>
+          <li><a href="product.html">ALL PRODUCTS</a></li>
+          <li class="active"><a href="help.html">HELP</a></li>
           <li><a href="contact.html">CONTACT US</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
