--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -61,8 +61,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li ><a href="index.html">HOME</a></li>
-          <li class="active"><a href="product.html">ALL PRODUCTS</a></li>
+          <li class="active" ><a href="index.html">HOME</a></li>
+          <li><a href="product.html">ALL PRODUCTS</a></li>
           <li><a href="help.html">HELP</a></li>
           <li><a href="contact.html">CONTACT US</a></li>
         </ul>
