--- a/kakascorner/login.html
+++ b/kakascorner/login.html
@@ -21,22 +21,47 @@
 
     <!-- Some JS script -->
     <script>
-        function show_create(){
-    $(".login-form").css("display","none");
-    $(".signup-form").fadeIn();
-}
-function show_login(){
-    $(".signup-form").css("display","none");
-    $(".login-form").fadeIn();
-}
+        function show_create() {
+            $(".login-form").css("display", "none");
+            $(".signup-form").fadeIn();
+        }
+        function show_login() {
+            $(".signup-form").css("display", "none");
+            $(".login-form").fadeIn();
+        }
     </script>
 
 </head>
+
 <body>
     <div class="body">
         <div class="layer">
             <div class="form">
                 <div class="login-form">
+                    <!-- Load Facebook SDK for JavaScript -->
+                    <div id="fb-root"></div>
+                    <script>
+                        window.fbAsyncInit = function () {
+                            FB.init({
+                                xfbml: true,
+                                version: 'v10.0'
+                            });
+                        };
+
+                        (function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0];
+                            if (d.getElementById(id)) return;
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }(document, 'script', 'facebook-jssdk'));
+                    </script>
+
+                    <!-- Your Chat Plugin code -->
+                    <div class="fb-customerchat" attribution="setup_tool" page_id="447710355997001">
+                    </div>
+
                     <div class="heading">Welcome back!</div>
                     <div class="input-box">
                         <form action="" method="post">
@@ -46,7 +71,9 @@ function show_login(){
                         </form>
                     </div>
                     <br>
-                    Don't have an account? <button type="button" id="showCreateBtn" class="togglebtn" onclick="show_create()">Create an account</button> now! Or <a href="index.html" class="togglebtn">go back to homepage</a> 
+                    Don't have an account? <button type="button" id="showCreateBtn" class="togglebtn"
+                        onclick="show_create()">Create an account</button> now! Or <a href="index.html"
+                        class="togglebtn">go back to homepage</a>
                 </div>
                 <div class="signup-form">
                     <div class="heading"> Sign up </div>
@@ -55,15 +82,18 @@ function show_login(){
                             <input type="text" class="input" placeholder="New Email address..." required>
                             <input type="password" class="input" placeholder="New password..." required>
                             <input type="password" class="input" placeholder="Repeat new password..." required>
-                            <input onclick="location.href = 'signsucc.html';" type="submit" class="submit" value="Create account">
+                            <input onclick="location.href = 'signsucc.html';" type="submit" class="submit"
+                                value="Create account">
                         </form>
                     </div>
                     <br>
-                    Already signed up? <button type="button" id="showCreateBtn" class="togglebtn" onclick="show_login()">Login</button>.
+                    Already signed up? <button type="button" id="showCreateBtn" class="togglebtn"
+                        onclick="show_login()">Login</button>.
                 </div>
             </div>
         </div>
     </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
+
 </html>
