--- a/kakascorner/login.html
+++ b/kakascorner/login.html
@@ -67,7 +67,7 @@
                         <form action="" method="post">
                             <input type="email" class="input" placeholder="Email address..." required>
                             <input type="password" class="input" placeholder="Password..." required>
-                            <input onclick="location.href = 'success.html';" type="submit" class="submit" value="login">
+                            <input onclick="location.href = 'index.html';" type="submit" class="submit" value="login">
                         </form>
                     </div>
                     <br>
